--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,22 @@
         android:theme="@style/Theme.AplicacionCrudClaudia"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".detalle_Producto"
+            android:exported="false" />
+        <activity
+            android:name=".Item_Card"
+            android:exported="false" />
+        <activity
+            android:name=".Tickets"
+            android:exported="false" />
+        <activity
+            android:name=".Bienvenido"
+            android:exported="false" />
+        <activity
+            android:name=".activity_Login"
+            android:exported="false" />
+        <activity
+            android:name=".activity_registrar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
